add replay and design. befor this version replace unwanted word

--- a/socialmedia/socialapp/templates/pages/post_page.html
+++ b/socialmedia/socialapp/templates/pages/post_page.html
@@ -1,125 +1,171 @@
 <!doctype html>
 <html >
   <head>
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <style>
       .border{
-      border:1px solid black;
-      width:60%
-    }
-    .bar{
-      background-color:#0059FF;
-      font-display: white;
-    }
+        border:1px solid black;
+        width:60%
+      }
+      .bar{
+        background-color:#0059FF;
+        font-display: white;
+      }
+      body, .comment{
+       background-color:#0011;
+      }
+      .main{
+       background-color:#FFFFFF;
+       box-shadow: 1px 2px 6px 2px #202111;
+       border-radius: 5px;
+      }
+      .box_reply{
+       background-color:#FFFFFF; 
+       border-radius: 5px;       
+      }
+      .title {
+        font-size: 17px;
+        color:#0011AA;
+      }
+      .border-bottom{
+        font-size: 13px;
+        border-bottom:1px solid #d3d3d3;
+      }
+      .post_body{
+        border:1px solid #0011;
+        margin: 6px 6px 6px 6px;
+        border-radius: 5px;
+      }
+      .com{
+        font-size: 15px;
+        display: block;
+        float: left;
+        margin: 20px;
+        border-radius: 5px;
+        border:2px;
 
+      }
+      .line{
+        background-color:#FFFFFF; 
+      }
+      .rep{
+        background-color:#FFFFFF;
+        border-radius: 5px;
+        border:1px solid #0011;
+      }
     </style>
   </head>
-<body>
-  <nav class="navbar navbar-expand-md  bar">
-    {% load static %}
-  <div class="navbar-brand" >   <img src="{% static  'photos/6.jpg' %}" width="40" height="40"/><span> News </span> </div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" >
-   <span class="navbar-toggler-icon"></span>
-  </nav>
-
-<br/>
-<br/>
-
-  <div align="center" class="row">
-    <div class="col-1"> </div>
-  {% load static %}
-    {%  for post in post_data %}
-    <div class="col-10">
-    <div class="border text-center">
-
-    <h2> {{post.title }} </h2>
-    <img width="350" height="350" src="{%static  post.img %}" >
+  <body>
+    <nav class="navbar navbar-expand-md  bar">
+      {% load static %}
+      <div class="navbar-brand" >   
+        <img src="{% static  'photos/6.jpg' %}" width="40" height="40"/>
+        <span> News </span> 
+      </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" ></button>
+      <span class="navbar-toggler-icon"></span>
+    </nav>
     <br/>
-    <p> {{post.p_body}} </p>
-    <span> tags:#{{post.tag}} </span>
-  <br/>
-  {%  for category in all_categories %}
-    {% if post.cat_name_id == category.id %}
-    <span> Category:{{category.category_name}} </span>
-    {% endif %}
-    {% endfor %}
     <br/>
-
-    </div>
-
-    <div class="border text-left">
-      <button type="button" class="btn btn-default btn-sm">
-       <span class="glyphicon glyphicon-thumbs-up"></span> Like
-      </button>
+    <div align="center" class="container main col-lg-8 rounded pb-1 bg-light col-lg-offset-2" >
+      {% load static %}
+      {%  for post in post_data %}
+      <div class="row title">
+        <h2> {{post.title }} </h2>
+      </div>
+      <div class="col-lg-4 pr-0">
+        <p class="w-100 p-2 m-0"><span class="float-right"><i class="fa fa-clock-o mr-1" aria-hidden="true"></i>{{post.time}}</span></p>
+      </div> 
+      <div class="col-lg-4 pr-0">
+        tags:<a> #{{post.tag}} </a>
+      </div>
+      <div class="col-lg-4 pr-0">
+        {%  for category in all_categories %}
+          {% if post.cat_name_id == category.id %}
+            Category:<a> {{category.category_name}} </a>
+          {% endif %}
+        {% endfor %}
+      </div>  
+      <div class="row title">
+        <img width="700" height="350" src="{%static  post.img %}" />
+      </div>
+      <br/>
+      <div class="col-lg-12 post_body">
+        <p> {{post.p_body}} </p>
+      </div> 
+      <br/>
+      <div class="col-lg-8 pr-0 col-lg-offset-2">
+        <button type="button" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-thumbs-up">Like</span> 
+        </button>
         <label>{{post.like}} </label>
         <button type="button" class="btn btn-default btn-sm">
-         <span class="glyphicon glyphicon-thumbs-down"></span> Unlike
-       </button>
-      <label>{{post.dislike}} </label>
-    <input type="text" placeholder="Add Comment"  id="comment_value" width="250px">
-    <button type="button" class="btn btn-primary" id="add_comment" post_id="{{post.id}}">Comment</button>
-    </div>
-    <div class="border text-center">
-      <span>Comments</span> 
-    </div>
-    <div class="border text-left" id="comments_post">
-      {% load static %}
-      {% for comment in allcomments %}
-        {% if comment.id_post_id == post.id %}
-          <hr/>
-          <div  class="comm">
-          {% for user in allusers %}
-            {% if user.id == comment.c_user_id %}
-              <h3>{{user.username}}</h3>
-            {% endif %} 
-          {% endfor %}
-          <p>{{comment.time}}</p>
-          <p>{{comment.c_body}}</p>
-          {% if comment.R_check %}
-            <p class=" text-center">Reply</p>
-            <div class="all_replys" class="border" rep_com_id="{{comment.id}}">
-            {% for reply in all_replys %}
-
-              {% if reply.post_id_id == comment.id %}
-               
-                <div class="rep"  >
-
-                  {% for user in allusers %}
-                    {% if user.id == reply.R_user_id %}
-                        <h4>{{user.username}}</h4>
-                    {% endif %} 
-                  {% endfor %}
-                  <p>{{reply.time_reply}}</p>
-                  <p>{{reply.R_body}}</p>
-                </div>
-              {% endif %}  
-            {% endfor %}
-          </div>
-          {% else %} 
-          <div c="{{comment.id}}">
-            <input type="text" placeholder="Add Reply"  class="reply_value" comment_id="{{comment.id}} width="250px">
-            <button type="button" class="btn btn-primary" class="add_reply" comment_id="{{comment.id}}">Reply</button>
-          </div>
+          <span class="glyphicon glyphicon-thumbs-down">Unlike</span> 
+        </button>
+        <label>{{post.dislike}} </label>
+        <input type="text" placeholder="Add Comment"  id="comment_value" width="250px">
+        <button type="button" class="btn btn-primary" id="add_comment" post_id="{{post.id}}">Comment</button>
+      </div>
+      <div class="title col-lg-12 post_body">
+        <span>Comments</span> 
+      </div>
+      <div id="comments_post" class="box_reply col-lg-10 col-lg-offset-1">
+        {% load static %}
+        {% for comment in allcomments %}
+          {% if comment.id_post_id == post.id %} 
+            <div  class="comm comment col-lg-10 col-lg-offset-1">
+              {% for user in allusers %}
+                {% if user.id == comment.c_user_id %}
+                  <h3 class="title comm col-lg-12 ">{{user.username}}</h3>
+                  <div class="col-lg-12 ">
+                    <p class="w-100 p-2 m-0"><span class="float-right"><i class="fa fa-clock-o mr-1" aria-hidden="true"></i>{{comment.time}}</span></p>
+                  </div>
+                  <div class="col-lg-12 pr-0"> 
+                    <p>{{comment.c_body}}</p>
+                  </div>
+                  {% if comment.R_check %}
+                    <div class="title col-lg-4 col-lg-offset-4 post_body box_reply">
+                      <span class=" text-center">Reply</span>
+                    </div> 
+                    <div class="all_replys col-lg-12" class="border" rep_com_id="{{comment.id}}">
+                      {% for reply in all_replys %}
+                        {% if reply.post_id_id == comment.id %}
+                          <div class="rep"  >
+                            {% for user in allusers %}
+                              {% if user.id == reply.R_user_id %}
+                                <h4>{{user.username}}</h4>
+                              {% endif %} 
+                            {% endfor %}
+                            <p>{{reply.time_reply}}</p>
+                            <p>{{reply.R_body}}</p>
+                          </div>
+                        {% endif %}  
+                      {% endfor %}
+                    </div> 
+                  {% else %}
+                    <div c="{{comment.id}}" class="col-lg-12">
+                      <input type="text" placeholder="Add Reply"  class="reply_value" comment_id="{{comment.id}}" width="250px"/>
+                      <button type="button" class="btn btn-primary" class="add_reply" comment_id="{{comment.id}}">Reply</button>
+                    </div>
+                  {% endif %}
+                {% endif %} 
+              {% endfor %}
+            </div> 
           {% endif %}
-          </div>          
-        {% endif %}
+          <div class="line container-fluid">
+          </div>  
+         {% endfor %}  
+      </div>
       {% endfor %}
-
-    </div>
-</div>
- {% endfor %}
-
-    </body>
+    </div> 
     <script src="{% static 'jquery.min.js'  %}"></script>
     <script src="{% static 'js/jquery-3.1.1.js' %}"></script>
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
     <script type="text/javascript">
       $(document).ready(function(){
-        
+  
         $('#add_comment').on('click',function(e){ 
           var url_path=window.location.href;
           var post_id= $(this).attr("post_id");
@@ -140,7 +186,6 @@
                                                                                                                                                                 
         });
     
-
         $('button[comment_id]').on('click',function(e){
           var parent=$(this).parent();
           var reply_data =$(this).parent().children().eq(0).val();
@@ -165,5 +210,6 @@
         });
 
       });
-    </script>
-  </html>
+    </script>  
+ </body>
+</html>
