--- a/socialmedia/socialapp/templates/pages/home.html
+++ b/socialmedia/socialapp/templates/pages/home.html
@@ -34,12 +34,9 @@
 <body>
   {% include 'pages/navbar.html' %}
 
-
-
-
 <div class="container">
 <div class="row">
-<div class=" col-8">
+<div class="col-9">
   <br/>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
  <ol class="carousel-indicators ">
@@ -50,16 +47,16 @@
  <div class="carousel-inner">
    <div class="carousel-item active" width="100">
       {% load static %}
-     <img class="d-block w-100" src="{%static 'photos/sports.jpg' %}" alt="First slide" width="200"/>
+     <img class="d-block w-100" src="{%static 'photos/sports.jpg' %}" alt="First slide" width="100" class="img-fluid"/>
 
    </div>
    <div class="carousel-item">
-     <img class="d-block w-100" src="{%static 'photos/arts.jpg' %}" alt="Second slide" width="100"/>
+     <img class="d-block w-100" src="{%static 'photos/arts.jpg' %}" alt="Second slide" class="img-fluid" width="100"/>
 
    </div>
 
     <div class="carousel-item">
-     <img class="d-block w-100" src="{%static 'photos/news.jpg' %}" alt="Third slide" width="200"/>
+     <img class="d-block w-100" src="{%static 'photos/news.jpg' %}" class="img-fluid"alt="Third slide" width="200" class="img-fluid"/>
    </div>
  </div>
  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -70,12 +67,14 @@
         </a>
   </div>
   <br/>
+
   <hr/>
+
   {% load static %}
     {%  for post in posts %}
   <div class="border text-center ">
   <h2> {{post.title }} </h2>
-    <a href="/socialapp/{{post.id}}/post_page">   <img src="{% static ""%}img/{{ post.img }}" alt="photo" width=300>
+    <a href="/socialapp/{{post.id}}/post_page">   <img src="{% static ""%}img/{{ post.img }}"  class="img-fluid"  alt="photo" width=400>
 </a>
     <br/>
     <p> {{post.p_body}} </p>
@@ -90,14 +89,8 @@
     </div>
   </br>
     {% endfor %}
-
-
-
-
-
-
-
     <div class="text-center">
+
           {% if posts.has_other_pages %}
             <ul class="pagination">
               {% if posts.has_previous %}
@@ -106,11 +99,16 @@
                   <span class="sr-only">Previous</span>
                 </a></li>
               {% else %}
-                <li class="page-item disabled"> <span>&laquo;</span>   <span class="sr-only">Previous</span> </li>
+              <li class="page-item">
+                <a  class="page-link"  aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                  <span class="sr-only">Previous</span>
+                  </a>
+                  </li>
               {% endif %}
               {% for i in posts.paginator.page_range %}
                 {% if posts.number == i %}
-                  <li class"page-item active"> {{i}} </li>
+                   <li class="active page-item"> <a class="page-link">{{ i }} </a> <span class="sr-only"> </span></li>
                 {% else %}
                   <li class="page-item"> <a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
                 {% endif %}
@@ -120,55 +118,38 @@
       <span class="sr-only">Next</span>
                 </a></li>
               {% else %}
-                <li class="disabled page-item" ><span>&raquo;</span></li>
+              <li class=" page-item">
+                  <a class="page-link" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                  </a>
+              </li>
               {% endif %}
             </ul>
           {% endif %}
       </div>
 </div>
-<div class="col-1"> </div>
-<div class="col-3" >
-
+<div class="col-1"></div>
+<div class="col-2" >
   <br/>
+  <div class="w3-sidebar w3-bar-block border " style="width:20%" align="right">
+  <div class="text-center"><h3> Categories </h3> </div>
+<hr/>
   {%  for category in all_categories %}
-<div class="w3-sidebar w3-bar-block border " style="width:20%" align="right">
-  <div>
+
+  <div class='text-center'>
     <a href="/socialapp/{{category.id}}/cat_posts" class="w3-bar-item w3-button"> {{category.category_name}}</a>
-   <center><a href="/socialapp/subscribe/{{category.id}}">Subscribe</a></center>
-   
-   
+    <button  onclick="window.location.href='/socialapp/subscribe/{{category.id}}'" class="btn btn-primary"> Subscribe</button>
+
+    <hr/>
   </div>
   {% endfor %}
   </div>
 </div>
-<button onclick=></div>
-<script>
-$(function() {
-  $("#search").autocomplete({
-
-    source: "get_search/",
-
-    select: function (event, ui) {
-
-    window.location = "/socialapp/"+ui.item.id+"/post_page"
-
-    },
-    minLength: 2,
-  });
-
-$("#btn_search").on("click",function(){
-
-  var keyword =$("#search").val();
-  alert(keyword)
-  
-  window.location= "/socialapp/"+keyword+"/filter"
-
-
-})
-});
-</script>
-
-
-</body>
+</div>
+</div>
 <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+<script src="{%static 'handler.js' %}"> </script>
+</body>
+
 </html>
