--- a/socialmedia/socialapp/templates/pages/navbar.html
+++ b/socialmedia/socialapp/templates/pages/navbar.html
@@ -26,7 +26,7 @@
        {% endif %}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+        Options
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
@@ -35,7 +35,7 @@
           <a class="dropdown-item" href="/socialapp/accounts/logout">logout</a>
         </div>
       </li>
-     
+
     </ul>
       <input  id="search" class="form-control "  placeholder="Search" style="width:300px;margin-right: 5px">
       <button id="btn_search" class="btn btn_warning">Search</button>
