ahned-aya-ghada: work

--- a/socialmedia/socialapp/templates/invalid_login.html
+++ b/socialmedia/socialapp/templates/invalid_login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "login.html" %}
 {% block content %}
 <h2>your login details are invalid!</h2>
 <p>Click <a href="/socialapp/accounts/login/">here</a> to login again.</p>
