--- a/socialmedia/socialapp/templates/pages/filter.html
+++ b/socialmedia/socialapp/templates/pages/filter.html
@@ -103,7 +103,12 @@
   </div>
 </div>
 
-    </body>
-    <script src="{% static 'jquery.min.js' %}"></script>
+<script src="{% static 'jquery.min.js' %}"></script>
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+            <script src="{% static 'handler.js' %}"></script>
+
+    </body>
+
+
+
   </html>
