--- a/socialmedia/socialapp/templates/pages/newcat.html
+++ b/socialmedia/socialapp/templates/pages/newcat.html
@@ -13,10 +13,12 @@
 	{% include 'pages/navbar.html' %}
 
 <!-- end navbar -->
+<div class="container" style="width: 50%">
+
 <br>
-<div class="container">
-             <h3 class="alert alert-danger text-center" style="margin-top: 20px">NEW CATEGORY</h3>
+             <h3 class="alert alert-info text-center" style="margin-top: 20px">NEW CATEGORY</h3>
 <br/>
+
 <form method="POST" class="">{%csrf_token%}
 	<h3>{{form.as_p}}</h3>
 	<button type='submit' class="btn btn-info" >Save</button>
