--- a/socialmedia/socialapp/templates/login.html
+++ b/socialmedia/socialapp/templates/login.html
@@ -1,8 +1,30 @@
-{% extends "base.html" %}
-{% block content %}
+{% load static %}
+<!DOCTYPE html>
+<html><head>
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <title>SocialApp</title>
+    </head>
+    <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header" style="height: 100px">
+      <a class="navbar-brand" href="#"><p style="font-family:URW Chancery L, cursive;font-size:50px;padding-top: 20px">Social Application</p></a>
+    </div>
+  </div>
+</nav>
+        <!-- Start Login Body -->
+        <section id="login-body" style="padding-top: 150px">
+            <div class="container">
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                    <img src="{% static 'img/iti2.png' %}" alt="" class="img-responsive hidden-xs" width="40px" >
+                </div>
+                <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12" style="padding-top: 90px">
+    {% block content %}
 	{% if form.errors %}
 	<p class="error">Sorry, That's not a valid username or password</p>
 	{% endif %}
+    <h2>LOGIN</h2>
+    <h5>Please enter your username and password</h5>
 	<form action="/socialapp/accounts/auth/" method="post">{% csrf_token %}
 		<label for="username">User name:</label>
 		<input type="text" name="username" value="" id="username">
@@ -11,3 +33,10 @@
 		<input type="submit" value="login"/>
 	</form>
 	{% endblock %}
+                </div>
+            </div>
+        </section>
+        <!-- End Login Body -->
+    </body>
+</html>
+
