--- a/socialmedia/socialapp/templates/logout.html
+++ b/socialmedia/socialapp/templates/logout.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "login.html" %}
 {% block content %}
 <h2>Hi {{full_name}} you are now logged out!</h2>
+<p>Click <a href="/socialapp/accounts/login/">here</a> to login.</p>
 {% endblock %}
