--- a/socialmedia/socialapp/templates/pages/updatepst.html
+++ b/socialmedia/socialapp/templates/pages/updatepst.html
@@ -5,6 +5,23 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
  	<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
+ 	<style type="text/css">
+ 		.post_body{
+
+ 			width: 100%;
+ 			height:300px;
+ 		}
+ 		.custom-file-upload {
+		    border: 1px solid #fff;
+		    background-color: cyan;
+		    display: inline-block;
+		    padding: 6px 12px;
+		    cursor: pointer;
+}
+
+
+
+ 	</style>
 </head>
 <body>
 
@@ -13,13 +30,17 @@
 	{% include 'pages/navbar.html' %}
 
 <!-- end navbar -->
+<div class="container" style="width: 50%">
+
 <br>
-<div class="container">
-             <h3 class="alert alert-danger text-center" style="margin-top: 20px">UPDATE POST</h3>
+             <h3 class="alert alert-info text-center" style="margin-top: 20px">UPDATE POST</h3>
 <br/>
-<form method="POST">{%csrf_token%}
+
+<form method="POST" class="">{%csrf_token%}
 	<h3>{{form.as_p}}</h3>
 	<button type='submit' class="btn btn-info" >Save</button>
+	<br>
+	<br>
 
 <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
