--- a/socialmedia/socialapp/templates/pages/home.html
+++ b/socialmedia/socialapp/templates/pages/home.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html >
   <head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- jQuery !-->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
     <!-- jQuery UI !-->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -15,6 +16,7 @@
 
     <!-- Bootstrap CSS -->
 {% load static %}
+
     <link rel="stylesheet" href="{%static 'bootstrap.min.css' %}">
     <style>
       .border{
@@ -33,50 +35,7 @@
   </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" href="/socialapp/home">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        {% if is_admin == 1 %}
-
-        <a class="nav-link" href="/socialapp/dashboard">Dashboard <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/socialapp/allusers">Users</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/socialapp/allposts">Posts</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/socialapp/allcat">Categories</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/socialapp/allwords">Unwanted word</a>
-      </li>
-       {% endif %}
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/socialapp/accounts/logout">logout</a>
-        </div>
-      </li>
-     
-    </ul>
-      <input  id="search" class="form-control "  placeholder="Search" style="width:300px;margin-right: 5px">
-      <button id="btn_search" class="btn btn_warning">Search</button>
-  </div>
-</nav>
-
+  {% include 'pages/navbar.html' %}
 
 <br>
 <br>
